syntax = "proto3";

package auth;

option go_package = "github.com/asilbekturgunboev/broker/proto/auth";

service AuthService {
  rpc SendOTP(SendOTPRequest) returns (SendOTPResponse) {}
  rpc VerifyOTP(VerifyOTPRequest) returns (VerifyOTPResponse) {}
  rpc QRAuth(QRAuthRequest) returns (QRAuthResponse) {}
}


message SendOTPRequest {
  string phone_number = 1;
}

message SendOTPResponse {
  bool success = 1;
  string message = 2;
}

message VerifyOTPRequest {
  string phone_number = 1;
  string otp = 2;
}

message VerifyOTPResponse {
  bool success = 1;
  string message = 2;
  string token = 3;
}



message QRAuthRequest {
  string session_id = 1;
  int32 user_id = 2;
}

message QRAuthResponse {
  bool success = 1;
  string message = 2;
}

// protoc -I proto/ proto/auth.proto --go_out=proto/auth --go-grpc_out=proto/auth --go_opt=paths=source_relative --go-grpc_opt=paths=source_relative
